--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-optuna==3.6.1
-xgboost==2.0.3
-scikit-learn==1.4.2
-streamlit==1.35.0
-pandas==2.2.2
-numpy==1.26.4
-ucimlrepo==0.0.6
-plotly==5.22.0
+optuna
+xgboost
+scikit-learn
+streamlit
+pandas
+numpy
+ucimlrepo
+plotly
+matplotlib
